<resources>
    <string name="app_name">Timeregy</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">User Name</string>
    <string name="action_settings">Settings</string>
    <string name="option_items">Options</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Settings</string>
    <string name="menu_slideshow">My Badges</string>

    <string name="interval">Interval</string>
    <string name="set_interval">Set Intervals</string>
    <string name="non_interval">Non-Interval</string>

    <string name="work_time">Work Time</string>
    <string name="interval_time">Rest Time</string>
    <string name="total_rounds">Total Rounds</string>
    <string name="Duration">Duration</string>

    <string name="title_pomodoro">Pomodoro Timer</string>
    <string name="title_deep_focus">Deep Focus Timer</string>
    <string name="title_hiit">HIIT Timer</string>
    <string name="title_mindfulness">Mindfulness Timer</string>
    <string name="title_custom">Custom Timer</string>

    <string name="desc_pomodoro">Create a Custom Pomodoro Timer to boost your productivity</string>
    <string name="desc_deep_focus">Customize your deep focus timer to have your next few hours well-spent</string>
    <string name="desc_hiit">Customize your High Intensity Interval Training &amp; get the most out of your workouts</string>
    <string name="desc_mindfulness">Meditate and stay in your state of Zen!</string>
    <string name="desc_custom">Fully customize your timer template to meet your purpose</string>

    <string name="timer_name_hint">Timer  Name</string>

    <string name="tag_title">Tags</string>
    <string name="tag_none">None</string>
    <string name="tag_study">Study</string>
    <string name="tag_workout">Workout</string>
    <string name="tag_mindfulness">Mindfulness</string>

    <string name="interruptions_title">Timer Interruptions</string>
    <string name="interruptions_keeps_running">Keeps Running</string>
    <string name="interruptions_pasue">Pause Timer\non Switching App</string>
    <string name="interruptions_cancel">Cancel Timer\non Switching App</string>

    <string name="remarks_title">Remarks</string>
    <string name="remarks_hint">Your Message to Yourself</string>

    <string name="dialog_positive">Confirm</string>
    <string name="dialog_negative">Cancel</string>

    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="rounds">Rounds</string>

    <string name="delimeter">:</string>

    <string name="start_button">START</string>
    <string name="view_button">VIEW</string>
    <string name="pause_button">PAUSE</string>
    <string name="cancel_button">CANCEL</string>
    <string name="edit_button">EDIT</string>

    <string name="working">Working</string>
    <string name="resting">Resting</string>

    <string name="empty_string_error">Name Cannot be Blank</string>
    <string name="string_too_long_error">Name Cannot be Longer than 20 Characters</string>
    <string name="done">DONE</string>
    <string name="left">LEFT</string>

    <string name="count_down_finish_message">Timer Complete!</string>
</resources>