<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.junlin.timeregy.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_temp_options"
            app:destination="@id/temp_options" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.junlin.timeregy.ui.settings.SettingsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_mybadge"
        android:name="com.junlin.timeregy.ui.mybadge.MyBadgeFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_mybadges" />
    <fragment
        android:id="@+id/temp_options"
        android:name="com.junlin.timeregy.ui.temp_options.TempOptionsFragment"
        android:label="@string/option_items"
        tools:layout="@layout/fragment_temp_options" />
</navigation>