<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/minutes"/>
        <TextView
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/seconds"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <NumberPicker
            android:id="@+id/hours_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/NumberPicker"
            android:layout_weight="1"
            android:descendantFocusability="blocksDescendants"
            android:layout_marginHorizontal="4dp"
            />
        <NumberPicker
            android:id="@+id/minutes_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/NumberPicker"
            android:layout_marginHorizontal="4dp"
            android:descendantFocusability="blocksDescendants"
            android:layout_weight="1"
            />
        <NumberPicker
            android:id="@+id/seconds_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/NumberPicker"
            android:descendantFocusability="blocksDescendants"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            />
    </LinearLayout>
</LinearLayout>