<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/option"
    android:layout_margin="8dp"
    android:elevation="4dp"
    android:background="@color/menu_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/temp_option_profile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        tools:src="@drawable/pomodoro"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/temp_option_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        tools:text="@string/title_pomodoro"
        app:layout_constraintLeft_toRightOf="@+id/temp_option_profile"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:background="@color/side_note"
        android:layout_width="2dp"
        android:layout_height="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/temp_option_title"
        app:layout_constraintRight_toLeftOf="@id/temp_option_sidenote"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/temp_option_sidenote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/side_note"
        tools:text="@string/interval"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/temp_option_title"
        />

    <TextView
        android:textColor="@color/side_note"
        android:id="@+id/temp_option_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:textSize="12dp"
        tools:text="@string/desc_pomodoro"
        app:layout_constraintTop_toBottomOf="@+id/temp_option_title"
        app:layout_constraintLeft_toRightOf="@+id/temp_option_profile"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>