<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_name_parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="clear_text"
            app:counterTextColor="@color/textColor"
            android:hint="@string/timer_name_hint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >
            <!--app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/text_input_field"-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                app:errorEnabled="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/intervals_constraint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintTop_toBottomOf="@+id/text_input_name_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/interval_section_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/interval"
                android:textColor="@color/side_note"/>

            <TextView
                android:id="@+id/checkbox_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/interval_section_text"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/set_interval"
                android:textSize="20sp"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@+id/checkbox_text"
                app:layout_constraintRight_toRightOf="parent"
                android:buttonTint="@color/colorAccentDeeper"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/work_time_constraint"
            android:layout_width="168dp"
            android:layout_height="144dp"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/card_layout"
            app:layout_constraintTop_toBottomOf="@+id/intervals_constraint"
            app:layout_constraintLeft_toLeftOf="parent">
            <ImageView
                android:layout_width="128dp"
                android:layout_height="96dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginHorizontal="16dp"
                android:src="@drawable/work_chart"/>
            <TextView
                android:id="@+id/work_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/side_note"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/work_time"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/work_time_title"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:text="25"
                android:textSize="36sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/interval_time_constraint"
            android:layout_width="168dp"
            android:layout_height="144dp"
            android:layout_marginVertical="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/card_layout"
            app:layout_constraintTop_toBottomOf="@+id/intervals_constraint"
            app:layout_constraintRight_toRightOf="parent">
            <ImageView
                android:layout_width="128dp"
                android:layout_height="96dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginHorizontal="16dp"
                android:src="@drawable/interval_chart"/>
            <TextView
                android:id="@+id/interval_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/side_note"
                android:text="@string/interval_time"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/interval_time_title"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:text="5"
                android:textSize="36sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/round_constraint"
            android:layout_width="352dp"
            android:layout_height="80dp"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/card_layout"
            app:layout_constraintTop_toBottomOf="@+id/work_time_constraint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <ImageView
                android:layout_width="320dp"
                android:layout_height="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginHorizontal="16dp"
                android:src="@drawable/round_chart"/>
            <TextView
                android:id="@+id/round_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/side_note"
                android:text="@string/total_rounds"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/total_rounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/round_title"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="5"
                android:textSize="36sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"/>
            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="300"
                android:textSize="20sp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="14dp"/>
            <TextView
                android:id="@+id/round_duration_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/side_note"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/duration"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/Duration"
                android:textSize="16sp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--<com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton_group"
            app:singleSelection="true"
            app:selectionRequired="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button 1"
                style="?attr/materialButtonOutlinedStyle"
                />
            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button 2"
                style="?attr/materialButtonOutlinedStyle"
                />
            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button 3"
                style="?attr/materialButtonOutlinedStyle"
                />
        </com.google.android.material.button.MaterialButtonToggleGroup>-->

        <TextView
            android:id="@+id/tag_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/tag_title"
            android:textColor="@color/side_note"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/round_constraint"/>

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintTop_toBottomOf="@id/tag_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <RadioButton
                android:id="@id/none"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/tag_none"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/study"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tag_study"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/workout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tag_workout"
                android:layout_weight="1.2"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tag_mindfulness"
                android:layout_weight="1.6"/>
        </RadioGroup>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_baseline_add_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>