<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerActivity">
    <TextView
        android:id="@+id/timer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textSize="24sp"
        tools:text="Pomodoro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tag_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        tools:text="Study"
        app:layout_constraintTop_toBottomOf="@id/timer_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/tag_img"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="8dp"
        tools:src="@drawable/tag_study"
        app:layout_constraintRight_toLeftOf="@+id/tag_name"
        app:layout_constraintTop_toBottomOf="@id/timer_name"/>
    <TextView
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="25:00"
        android:textSize="48sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <ImageView
        android:id="@+id/work_rest_icon"
        android:layout_width="14dp"
        android:layout_height="14dp"
        app:layout_constraintRight_toLeftOf="@id/work_rest"
        app:layout_constraintBottom_toTopOf="@id/timer_text"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="4dp"
        tools:src="@drawable/working"/>
    <TextView
        android:id="@+id/work_rest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Working"
        android:textColor="@color/side_note"
        app:layout_constraintBottom_toTopOf="@id/timer_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"/>
    <Button
        android:id="@+id/start_pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:layout_marginTop="32dp"
        android:text="@string/start_button"
        app:layout_constraintTop_toBottomOf="@id/timer_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/rounds_done"
        android:layout_width="48dp"
        android:gravity="end"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:textColor="@color/side_note"
        tools:text="5"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toLeftOf="@id/separator"
        app:layout_constraintBottom_toBottomOf="@id/work_and_rest_progress" />

    <View
        android:id="@+id/separator"
        android:layout_width="2dp"
        android:layout_height="36dp"
        android:background="@color/side_note"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/work_and_rest_progress"/>

    <TextView
        android:id="@+id/rounds_left"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:gravity="start"
        android:textColor="@color/side_note"
        tools:text="5"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toRightOf="@+id/separator"
        app:layout_constraintBottom_toBottomOf="@id/work_and_rest_progress" />

    <TextView
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/done"
        android:gravity="end"
        android:textColor="@color/side_note"
        app:layout_constraintRight_toRightOf="@+id/rounds_done"
        app:layout_constraintTop_toBottomOf="@id/rounds_done"/>

    <TextView
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:text="@string/left"
        android:textColor="@color/side_note"
        app:layout_constraintLeft_toLeftOf="@+id/rounds_left"
        app:layout_constraintTop_toBottomOf="@id/rounds_left"/>

    <ProgressBar
        android:id="@+id/work_and_rest_progress"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:indeterminateDrawable="@drawable/progress_bar_circle_green"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:progressTint="@color/colorAccent"
        android:progressBackgroundTint="@color/activityBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ProgressBar
        android:id="@+id/whole_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:progressTint="@color/colorAccentDeepest"
        android:scaleY="16"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:progress="60" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/percentage"/>


</androidx.constraintlayout.widget.ConstraintLayout>